tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_tag_mapvalues_unknown_field.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Tag error: unexpected field 'separator'

Valid fields are: items, template, var (optional) @ example-templates/errors/tag-mapvalues-unknown-field.yaml:12:3 (errno: ERR_4005)
  -> check field spelling and tag documentation

  11 |   template: "{{item.key}}"
  12 |   separator: "-"

   example:
   !$mapValues
     <check documentation for proper syntax>
   For more info: iidy explain ERR_4005
