tests/snapshots/error_examples_snapshots__auto_discovered_example_templates_errors_yaml_syntax_malformed_mapping.snap
---
source: tests/error_examples_snapshots.rs
expression: "format!(\"{}\", e)"
---
Syntax error: invalid YAML structure @ example-templates/errors/yaml-syntax-malformed-mapping.yaml:7:22 (errno: ERR_1001)
  -> tags cannot be chained - use list syntax

   6 |       BucketName: !Sub "my-bucket"
   7 |       Enabled: !$not !$eq
     |                      ^
   8 |         - "true"

   fix: put the inner tag in a list to separate it from the outer tag
   example: !$not [!$eq ["a", "b"]]

   For more info: iidy explain ERR_1001
